--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,24 @@
   "name": "Weather",
   "short_name": "Weather",
   "icons": [{
-    "src": "images/336511_05047_1.jpg",
+    "src": "images/icons/icon-128x128.png",
       "sizes": "128x128",
       "type": "image/png"
     }, {
-      "src": "images/metrodebogota.jpg",
+      "src": "images/icons/icon-144x144.png",
       "sizes": "144x144",
+      "type": "image/png"
+    }, {
+      "src": "images/icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    }, {
+      "src": "images/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }, {
+      "src": "images/icons/icon-256x256.png",
+      "sizes": "256x256",
       "type": "image/png"
     }],
   "start_url": "/index.html",
